fix: fixed checkbox's z-index issue

--- a/src/sass/components/molecules/game-categories-card/_styles.scss
+++ b/src/sass/components/molecules/game-categories-card/_styles.scss
@@ -43,7 +43,7 @@
       position: absolute;
       top: calculateRem(4px);
       left: calculateRem(4px);
-      z-index: 1;
+      z-index: 2;
       input {
         background-color: #fff;
       }
